--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,79 +3,58 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background: linear-gradient(to bottom, #060647, #000000); /* Dark blue to black gradient */
     color: #fff; /* Text color */
 }
-.chat-container {
-    width: 85%;
-    height: 60vh; /* 60% of viewport height */
-    max-width: 600px;
-    border: 6px solid #ccc;
-    border-radius: 16px;
+
+.title-container {
+    width: 80%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.description-container {
+    width: 35%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.link-container {
+    width: 80%;
+    height: 20%;
     overflow: hidden;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.link-container input {
+    width: 80%;
+    height: 20%;
+    padding: 10px;
+    border: 6px solid #ccc;
+    color: #fff;
+    font-size: 16px;
+    border-radius: 16px;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
 }
-.chat-messages {
-    height: calc(100% - 82px); /* Subtract input container height */
-    padding: 10px;
-    overflow-y: scroll;
-    scrollbar-width: thin; /* For Firefox */
-}
 
-.message {
-    margin-bottom: 10px;
-}
-.message .user {
-    font-weight: bold;
-    color: #FFA500; /* User message color */
-}
-.message .text {
-    margin-left: 10px;
-}
-
-.input-container {
-    height: 42px;
-    display: flex;
-    align-items: center;
+.link-container button {
+    width: 10%;
+    height: 30%;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent white background */
-}
-.input-container input[type="text"] {
-    flex: 1;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent white background */
-    color: #fff; /* Text color */
-}
-.input-container button {
-    padding: 8px 15px;
-    margin-left: 10px;
     border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
+    font-size: 16px;
+    border-radius: 16px;
+    background-color: rgb(255, 255, 255); /* Semi-transparent black background */
+    color: #000000; /* Text color */
     cursor: pointer;
-}
-.input-container button:hover {
-    background-color: #0056b3;
-}
-
-/* Scrollbar */
-.chat-messages::-webkit-scrollbar {
-    width: 10px; /* Width of the scrollbar */
-}
-
-/* Scrollbar thumb */
-.chat-messages::-webkit-scrollbar-thumb {
-    background-color: #ccc; /* Color of the scrollbar thumb */
-    border-radius: 5px; /* Rounded corners */
-}
-
-/* Scrollbar track */
-.chat-messages::-webkit-scrollbar-track {
-    background-color: #666; /* Color of the scrollbar track */
 }
