--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,29 +2,110 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100vh;
+    background: linear-gradient(to bottom, #0a0a70, #000000); /* Dark blue to black gradient */
+    color: #fff; /* Text color */
+}
+
+@media screen and (max-width: 1024px) {
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        height: 200vh;
+        background: linear-gradient(to bottom, #0a0a70, #000000); /* Dark blue to black gradient */
+        color: #fff; /* Text color */
+    }
+}
+
+.nav-container {
+    width: 100%;
+    height: 8%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(0, 0, 0); /* Semi-transparent black background */
+}
+
+@media screen and (max-width: 1024px) {
+    .nav-container {
+        width: 100%;
+        height: 8%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+}
+.nav-container .info-container {
+    padding: 15px; 
+}
+
+.nav-container .social-container {
+    padding: 15px;
+}
+
+.nav-container .social-container a {
+    margin: 0 10px;
+    color: #fff; /* Text color */
+    text-decoration: none;
+}
+
+.content-container {
+    width: 100%;
+    height: calc(100% - 8%);
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background: linear-gradient(to bottom, #060647, #000000); /* Dark blue to black gradient */
-    color: #fff; /* Text color */
+    flex-direction: column;
 }
 
 .title-container {
     width: 80%;
     height: 20%;
+    font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .description-container {
-    width: 35%;
-    height: 20%;
+    width: 85%;
+    height: 30%;
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.description-container .description {
+    width: 25%;
+    font-size: 20px;
+    text-align: center;
+}
+
+.description-container .input-image {
+    max-width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.description-container .output-image {
+    max-width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.description-container img {
+    max-height: 70%;
+    width: auto;
+    border-radius: 6px;
 }
 
 .link-container {
@@ -34,6 +115,50 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .description-container {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .description-container .description {
+        width: 50%;
+        font-size: 15px;
+        text-align: center;
+    }
+    .description-container .input-image {
+        max-width: 25%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .description-container .output-image {
+        max-width: 25%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .link-container {
+        width: 75%;
+        height: 20%;
+        overflow: hidden;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+    }
 }
 
 .link-container input {
@@ -48,7 +173,7 @@ body {
 }
 
 .link-container button {
-    width: 10%;
+    max-width: 100px;
     height: 30%;
     padding: 10px;
     border: none;
