--- a/static/css/home.css
+++ b/static/css/home.css
@@ -16,23 +16,32 @@ body {
     background-color: rgb(0, 0, 0); /* Semi-transparent black background */
 }
 
-@media screen and (max-width: 1024px) {
-    .nav-container {
-        width: 100%;
-        height: 16%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-    }
-}
 .nav-container .info-container {
     padding: 15px; 
 }
 
 .nav-container .social-container {
     padding: 15px;
+}
+
+@media screen and (max-width: 1024px) {
+    .nav-container {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+    .nav-container .info-container {
+        padding: 10px;
+        font-size: 14px;
+    }
+    .nav-container .social-container {
+        padding: 10px;
+        font-size: 15px;
+    }
 }
 
 .nav-container .social-container a {
@@ -51,6 +60,13 @@ body {
     height: calc(100vh - 8%); /* Subtract nav container height */
     background: linear-gradient(to bottom, #0a0a70, #000000); /* Dark blue to black gradient */
     color: #fff; /* Text color */
+}
+
+@media screen and (max-width: 1024px) {
+    .content-container {
+        height: calc(100vh - 10%); /* Subtract nav container height */
+    }
+    
 }
 .chat-container {
     width: 85%;
